RESOLVED FIXED114380
[Mac] in-band tracks sometimes not recognized
https://bugs.webkit.org/show_bug.cgi?id=114380
Summary [Mac] in-band tracks sometimes not recognized
Eric Carlson
Reported 2013-04-10 13:44:59 PDT
r148064 causes in-band tracks to sometimes not be registered
Attachments
Proposed patch (3.56 KB, patch)
2013-04-10 13:49 PDT, Eric Carlson
no flags
Radar WebKit Bug Importer
Comment 1 2013-04-10 13:45:24 PDT
Eric Carlson
Comment 2 2013-04-10 13:49:50 PDT
Created attachment 197400 [details] Proposed patch
WebKit Commit Bot
Comment 3 2013-04-10 14:51:59 PDT
Comment on attachment 197400 [details] Proposed patch Clearing flags on attachment: 197400 Committed r148140: <http://trac.webkit.org/changeset/148140>
WebKit Commit Bot
Comment 4 2013-04-10 14:52:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.