[Mac] in-band tracks sometimes not recognized https://bugs.webkit.org/show_bug.cgi?id=114380

Reviewed by Jer Noble.

No new tests, covered by existing in-band tests.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayerItem): Don't call selectMediaOption,
    availableMediaCharacteristicsWithMediaSelectionOptions is unlikely to be loaded at this time.
(WebCore::MediaPlayerPrivateAVFoundationObjC::processTextTracks): Disable automatic text track
    selection.
(WebCore::assetMetadataKeyNames): Watch for the status of availableMediaCharacteristicsWithMediaSelectionOptions
    to change.


Canonical link: https://commits.webkit.org/132757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148140 268f45cc-cd09-0410-ab3c-d52691b4dbfc